cmd/openshift/operator/kodata/tekton-hub/v1.15.1/api/api.yaml
# Copyright © 2020 The Tekton Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-hub-api
  labels:
    app: tekton-hub-api
spec:
  selector:
    matchLabels:
      app: tekton-hub-api
  replicas: 1
  template:
    metadata:
      labels:
        app: tekton-hub-api
    spec:
      volumes:
        - name: catalog-source
          persistentVolumeClaim:
            claimName: tekton-hub-api
        - name: tekton-hub-config
          configMap:
            name: tekton-hub-api
            items:
              - key: CATEGORIES
                path: 'categories'
              - key: CATALOGS
                path: 'catalogs'
              - key: SCOPES
                path: 'scopes'
              - key: CATALOG_REFRESH_INTERVAL
                path: 'catalog_refresh_interval'
              - key: DEFAULT
                path: 'default'
        - name: ssh-creds
          secret:
            secretName: tekton-hub-api-ssh-crds
            optional: true
      securityContext:
        fsGroup: 65532
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tekton-hub-api
          image: quay.io/tekton-hub/api:v1.15.1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: catalog-source
              mountPath: '/tmp/catalog'
            - name: ssh-creds
              mountPath: '/home/hub/.ssh'
            - name: tekton-hub-config
              mountPath: '/tmp/config'
          ports:
            - containerPort: 8000
            - containerPort: 4200
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
---
# Copyright © 2020 The Tekton Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: tekton-hub-api
  labels:
    app: tekton-hub-api
spec:
  selector:
    app: tekton-hub-api
  ports:
    - name: tekton-hub-api
      port: 8000
      targetPort: 8000
    - name: tekton-hub-auth
      port: 4200
      targetPort: 4200
  type: NodePort

---
# Copyright © 2020 The Tekton Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-hub-api
  labels:
    app: tekton-hub-api
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: tekton-hub-api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge

---
# Copyright © 2022 The Tekton Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-hub-auth
  labels:
    app: tekton-hub-api
spec:
  port:
    targetPort: 4200
  to:
    kind: Service
    name: tekton-hub-api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge

---
